feat(ui): generate password with hardware

--- a/src/main/resources/i18n/strings.properties
+++ b/src/main/resources/i18n/strings.properties
@@ -72,6 +72,7 @@ addvaultwizard.new.expertSettings.shorteningThreshold.title=Maximum length of en
 addvaultwizard.new.expertSettings.shorteningThreshold.valid=Valid
 ### Password
 addvaultwizard.new.createVaultBtn=Create Vault
+addvaultwizard.new.generatePasswordHWBtn=Generate using hardware
 addvaultwizard.new.generateRecoveryKeyChoice=You won't be able to access your data without your password. Do you want a recovery key for the case you lose your password?
 addvaultwizard.new.generateRecoveryKeyChoice.yes=Yes please, better safe than sorry
 addvaultwizard.new.generateRecoveryKeyChoice.no=No thanks, I will not lose my password
