--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -70,6 +70,7 @@ addvaultwizard.new.expertSettings.shorteningThreshold.title=Lunghezza massima de
 addvaultwizard.new.expertSettings.shorteningThreshold.valid=Valido
 ### Password
 addvaultwizard.new.createVaultBtn=Crea Cassaforte
+addvaultwizard.new.generatePasswordHWBtn=Genera usando l'hardware
 addvaultwizard.new.generateRecoveryKeyChoice=Non potrai accedere ai tuoi dati senza la tua password. Desideri una chiave di recupero nel caso dovessi perdere la password?
 addvaultwizard.new.generateRecoveryKeyChoice.yes=Si, per favore, è meglio essere al sicuro
 addvaultwizard.new.generateRecoveryKeyChoice.no=No grazie, non perderò la mia password
