test: better unlock integration

--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -123,6 +123,7 @@ unlock.title=Sblocca "%s"
 unlock.passwordPrompt=Inserisci la password per "%s":
 unlock.savePassword=Ricorda la password
 unlock.unlockBtn=Sblocca
+unlock.unlockHWBtn=Sblocca con Hardware
 ## Select
 unlock.chooseMasterkey.message=File Masterkey non trovato
 unlock.chooseMasterkey.description=Impossibile trovare il file Masterkey per questa cassaforte alla sua posizione prevista. Sei pregato di sceglierlo manualmente.
