--- a/src/main/resources/i18n/strings.properties
+++ b/src/main/resources/i18n/strings.properties
@@ -125,6 +125,7 @@ unlock.title=Unlock "%s"
 unlock.passwordPrompt=Enter password for "%s":
 unlock.savePassword=Remember password
 unlock.unlockBtn=Unlock
+unlock.unlockHWBtn=Unlock with Hardware
 ## Select
 unlock.chooseMasterkey.message=Masterkey file not found
 unlock.chooseMasterkey.description=Cryptomator could not find the masterkey file for vault "%s". Please choose the key file manually.
